arreglo del auth